--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,7 @@
   --text-primary: #000;
   --bgPrimary: #fff;
   --bgSecondary: #f9f9f9;
-  --pink: #0071bd;
+  --blue: #0071bd;
   --light-blue: #e6f7ff;
   --border: #d9d9d9;
 }
@@ -18,7 +18,7 @@ p {
 }
 
 a:hover {
-  color: var(--pink) !important;
+  color: var(--blue) !important;
 }
 
 .app {
@@ -151,7 +151,7 @@ a:hover {
 
 .coin-heading-container .coin-name {
   font-weight: 900;
-  color: var(--pink);
+  color: var(--blue);
 }
 
 .coin-heading-container p {
@@ -160,24 +160,24 @@ a:hover {
   margin-bottom: 20px;
 }
 
-.stats-container {
+/* .stats-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 40px;
-}
+} */
 
 .stats-container h2 {
   font-weight: 700;
   font-size: 1.4rem;
   margin-top: 20px;
-  color: var(--pink);
+  color: var(--blue);
 }
 
 .coin-details-heading {
   font-weight: 700 !important;
   margin-top: 20px !important;
-  color: var(--pink) !important;
+  color: var(--blue) !important;
 }
 
 .coin-stats {
@@ -213,7 +213,7 @@ a:hover {
 
 .coin-desc-link h2 {
   font-weight: 700;
-  color: var(--pink);
+  color: var(--blue);
 }
 
 .coin-desc-link p {
@@ -222,7 +222,7 @@ a:hover {
 }
 
 .coin-desc-link a {
-  color: var(--pink);
+  color: var(--blue);
 }
 
 .coin-desc-link h3 {
@@ -252,7 +252,7 @@ a:hover {
 }
 
 .coin-link a {
-  color: var(--pink);
+  color: var(--blue);
   font-weight: 700;
   font-size: 1rem;
 }
@@ -297,7 +297,7 @@ a:hover {
 
 .news-card img {
   width: 100%;
-  max-height: 138px;
+  /* max-height: 245px; */
 }
 
 .news-image-container {
